// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Temp] render renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn-back"
  >
    <View
      size="medium"
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Array [
            Object {
              "backgroundColor": "#47498A",
              "borderBottomColor": "#47498A",
              "borderLeftColor": "#47498A",
              "borderRightColor": "#47498A",
              "borderTopColor": "#47498A",
              "paddingBottom": 12,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 12,
            },
            false,
            undefined,
          ],
        ]
      }
      testID="button-container"
      type="solid"
    >
      <Text />
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            undefined,
          ]
        }
      >
        GO BACK
      </Text>
    </View>
  </View>
</View>
`;

exports[`[Temp] render should render [Dark] theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#232323",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn-back"
  >
    <View
      size="medium"
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Array [
            Object {
              "backgroundColor": "#585DFA",
              "borderBottomColor": "#585DFA",
              "borderLeftColor": "#585DFA",
              "borderRightColor": "#585DFA",
              "borderTopColor": "#585DFA",
              "paddingBottom": 12,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 12,
            },
            false,
            undefined,
          ],
        ]
      }
      testID="button-container"
      type="solid"
    >
      <Text />
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
            },
            undefined,
          ]
        }
      >
        GO BACK
      </Text>
    </View>
  </View>
</View>
`;
